navbar covering content fix

--- a/public/css/cart.css
+++ b/public/css/cart.css
@@ -1,5 +1,5 @@
 .cart-container {
-    padding: 0 4vw;
+    padding: 4vh 4vw;
     margin-bottom: 100px;
 }
 
