--- a/public/css/navbar.css
+++ b/public/css/navbar.css
@@ -7,6 +7,7 @@ header {
     top: 0;
     left: 0;
     width: 100%;
+    /* height: max-content; */
     padding: 1vw 0 0 0;
     background-color: var(--background-color);
     z-index: 6;
@@ -99,6 +100,7 @@ header {
 /* bottom section */
 .bottom-section {
     height: 50%;   
+    padding: .1% 0;
 }
 
 .bottom-section ul {
